XML optimizations